--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,8 @@
 server:
   port: ":3000"
-api_key: "WdBWZnG7-93q9bgEIDJNCgyJROrqHdOgHN19_heY94w"
+auth:
+  api_key: "inohom-api-key"
+  api_value: "WdBWZnG7-93q9bgEIDJNCgyJROrqHdOgHN19_heY94w"
 internal_log:
   log_file: "./server.log"
 kettas_log:
