fix: update gitignore to properly ignore yaml files and remove config.yaml from index

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,21 @@ go.work.sum
 
 # env file
 .env
+*.yaml
 
 # Editor/IDE
 .idea/
 .vscode/
+
+# files
+.DS_Store
+
+# logs
+*.log
+
+# folders
+kettas-logs/
+temp_uploads/
+
+
+
